--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <title>Sea Monster Crowdfunding</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
